// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformComponent > complex component scenarios > should handle components with conditional rendering 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function ConditionalComponent({
  showMessage
}) {
  const t = useTranslation(["3e08b6d47cba", "98b032f9a357"]);
  return <div>
      <h1>{t("3e08b6d47cba", "Title")}</h1>
      {showMessage && <p>{t("98b032f9a357", "Optional Message")}</p>}
    </div>;
}"
`;

exports[`transformComponent > complex component scenarios > should handle components with map 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function ListComponent({
  items
}) {
  const t = useTranslation(["ebb5cabd4638"]);
  return <div>
      <h1>{t("ebb5cabd4638", "List Title")}</h1>
      {items.map(item => <li key={item.id}>{item.name}</li>)}
    </div>;
}"
`;

exports[`transformComponent > isomorphic hooks (unified useTranslation) > should handle mixed async and non-async components in same file 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
import { getServerTranslations } from "@lingo.dev/_compiler/react/server";
export async function AsyncCard() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["56b193071692"]
  });
  const data = await fetchData();
  return <div>{t("56b193071692", "Async: {data}", {
      data
    })}</div>;
}
export function RegularCard() {
  const t = useTranslation(["af2755dd997d"]);
  return <div>{t("af2755dd997d", "Regular Hello")}</div>;
}"
`;

exports[`transformComponent > isomorphic hooks (unified useTranslation) > should still use async API for truly async server components 1`] = `
"import { getServerTranslations } from "@lingo.dev/_compiler/react/server";
export default async function AsyncServerPage() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["bb41c668afe3", "f5569fd96497"]
  });
  const data = await fetchData();
  return <div>
      <h1>{t("bb41c668afe3", "Async Server Component")}</h1>
      <p>{t("f5569fd96497", "Data: {data}", {
        data
      })}</p>
    </div>;
}"
`;

exports[`transformComponent > isomorphic hooks (unified useTranslation) > should use unified hook for client component with 'use client' directive 1`] = `
"'use client';

import { useTranslation } from "@lingo.dev/_compiler/react";
export default function ClientPage() {
  const t = useTranslation(["29e7d8d8f044", "4076d9ecece2"]);
  return <div>
      <h1>{t("29e7d8d8f044", "Client Component")}</h1>
      <p>{t("4076d9ecece2", "This uses the same API")}</p>
    </div>;
}"
`;

exports[`transformComponent > isomorphic hooks (unified useTranslation) > should use unified hook for non-async server component 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function ServerPage() {
  const t = useTranslation(["73688ae8699f", "b89ddadd8c99"]);
  return <div>
      <h1>{t("73688ae8699f", "Welcome")}</h1>
      <p>{t("b89ddadd8c99", "This is a non-async server component")}</p>
    </div>;
}"
`;

exports[`transformComponent > metadata transformation > should handle metadata with template literals (static only) 1`] = `
"export async function generateMetadata() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["474e6dfdb4da", "4bbff2c494fc"]
  });
  return {
    title: t("474e6dfdb4da", "Static Title"),
    description: t("4bbff2c494fc", "Regular Description")
  };
}"
`;

exports[`transformComponent > metadata transformation > should handle nested metadata objects (openGraph, twitter) 1`] = `
"export async function generateMetadata() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["901706843f7f", "361edde34b28", "361ca57123c6", "db2e1ebf4937", "727d40b9694a", "6f2dc702c8d1"]
  });
  return {
    title: t("901706843f7f", "Page Title"),
    description: t("361edde34b28", "Page Description"),
    openGraph: {
      title: t("361ca57123c6", "OG Title"),
      description: t("db2e1ebf4937", "OG Description")
    },
    twitter: {
      card: "summary_large_image",
      title: t("727d40b9694a", "Twitter Title"),
      description: t("6f2dc702c8d1", "Twitter Description")
    }
  };
}"
`;

exports[`transformComponent > metadata transformation > should transform existing generateMetadata function 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export async function generateMetadata({
  params
}) {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["785d876d89df", "d856e529f2c8"]
  });
  return {
    title: t("785d876d89df", "Dynamic Title"),
    description: t("d856e529f2c8", "Dynamic Description")
  };
}
export default function Page() {
  const t = useTranslation(["8e1367664144"]);
  return <div>{t("8e1367664144", "Content")}</div>;
}"
`;

exports[`transformComponent > metadata transformation > should transform static metadata export to generateMetadata 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
import type { Metadata } from "next";
export async function generateMetadata() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["df9408b365ed", "ab42d69596cc"]
  });
  return {
    title: t("df9408b365ed", "My Page Title"),
    description: t("ab42d69596cc", "This is my page description")
  };
}
export default function Page() {
  const t = useTranslation(["8e1367664144"]);
  return <div>{t("8e1367664144", "Content")}</div>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should NOT treat void elements (like Image) as rich text 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
import Image from "next/image";
export default function Button() {
  const t = useTranslation(["4a2ca567e0c8"]);
  return <a href="/deploy">
      <Image src="/icon.svg" alt="Icon" width={16} height={16} />{t("4a2ca567e0c8", "Deploy Now")}</a>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should handle expressions in JSX attributes 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
function Home() {
  const t = useTranslation(["f650c56c03c1", "3dd764fe7aab", "0b7248388d4d"]);
  const {
    locale,
    translations
  } = useTranslationContext();
  return <div>
      <h1>{t("f650c56c03c1", "Home Page")}</h1>
      <p>{t("3dd764fe7aab", "Current locale: {locale}", {
        locale
      })}</p>
      <p>{t("0b7248388d4d", "Translations loaded: {expression0}", {
        expression0: JSON.stringify(translations)
      })}</p>
    </div>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should handle multiple same-type nested elements 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Links() {
  const t = useTranslation(["6a6a7e72a4a7"]);
  return <p>{t("6a6a7e72a4a7", "Click <a0>here</a0> or <a1>there</a1>", {
      a0: chunks => <a href="/home">{chunks}</a>,
      a1: chunks => <a href="/about">{chunks}</a>
    })}</p>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should handle string literal expressions like {" "} 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Spaced() {
  const t = useTranslation(["2fd676849081"]);
  return <p>{t("2fd676849081", "Click <a0>here</a0> or <a1>there</a1>", {
      a0: chunks => <a href="/home">{chunks}</a>,
      a1: chunks => <a href="/about">{chunks}</a>
    })}</p>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should keep text separated by void elements as the single translation 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Links() {
  const t = useTranslation(["97afd867bba5"]);
  return <p>{t("97afd867bba5", "Click <br0/>there", {
      br0: () => <br />
    })}</p>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should not transform simple text-only elements 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Simple() {
  const t = useTranslation(["f8b4cfb70018"]);
  return <div>{t("f8b4cfb70018", "Just plain text")}</div>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should transform JSX with text and expressions 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Welcome() {
  const t = useTranslation(["c8d40d77d55f"]);
  const name = "John";
  return <div>{t("c8d40d77d55f", "Hello {name}, welcome!", {
      name
    })}</div>;
}"
`;

exports[`transformComponent > mixed content (rich text) > should transform JSX with text, expressions, and nested elements 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export default function Message() {
  const t = useTranslation(["4a25172a298b"]);
  const name = "Alice";
  const count = 5;
  return <div>{t("4a25172a298b", "Hello {name}, you have <strong0>{count}</strong0> messages", {
      name,
      count,
      strong0: chunks => <strong>{chunks}</strong>
    })}</div>;
}"
`;

exports[`transformComponent > multiple components in one file > should handle nested components 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
function OuterComponent() {
  const t = useTranslation(["9daad18b3a29"]);
  function InnerComponent() {
    const t = useTranslation(["d43d14308a37"]);
    return <span>{t("d43d14308a37", "Inner Text")}</span>;
  }
  return <div>
      <h1>{t("9daad18b3a29", "Outer Text")}</h1>
      <InnerComponent />
    </div>;
}
export default OuterComponent;"
`;

exports[`transformComponent > multiple components in one file > should transform arrow function components 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
const Welcome = () => {
  const t = useTranslation(["40f0ad754619"]);
  return <div>{t("40f0ad754619", "Welcome Message")}</div>;
};
const Goodbye = () => {
  const t = useTranslation(["b592655e3c8f"]);
  return <div>{t("b592655e3c8f", "Goodbye Message")}</div>;
};
export { Welcome, Goodbye };"
`;

exports[`transformComponent > multiple components in one file > should transform mixed function and arrow components 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Title() {
  const t = useTranslation(["2c7785af3ca4"]);
  return <h1>{t("2c7785af3ca4", "Page Title")}</h1>;
}
const Subtitle = () => {
  const t = useTranslation(["f7f537ee168a"]);
  return <h2>{t("f7f537ee168a", "Page Subtitle")}</h2>;
};
export const Description = () => {
  const t = useTranslation(["68e3e03a539d"]);
  return <p>{t("68e3e03a539d", "Page Description")}</p>;
};
export default function Container() {
  const t = useTranslation(["a14c905e3266"]);
  return <div>
      <Title />
      <Subtitle />
      <Description />
      <footer>{t("a14c905e3266", "Footer Text")}</footer>
    </div>;
}"
`;

exports[`transformComponent > multiple components in one file > should transform multiple function components 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Header() {
  const t = useTranslation(["0d0ab07cccc4"]);
  return <header>{t("0d0ab07cccc4", "Site Header")}</header>;
}
export function Footer() {
  const t = useTranslation(["f9cc8c2743cf"]);
  return <footer>{t("f9cc8c2743cf", "Site Footer")}</footer>;
}
export function Main() {
  const t = useTranslation(["3a9e2195e549"]);
  return <main>{t("3a9e2195e549", "Main Content")}</main>;
}"
`;

exports[`transformComponent > server components > should inject correct hash array for server component 1`] = `
"import { getServerTranslations } from "@lingo.dev/_compiler/react/server";
export async function ServerCard() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["37e8a52e4028", "54ee3cde38cd", "82e802cc4b0f"]
  });
  return <div>
      <h2>{t("37e8a52e4028", "Title")}</h2>
      <p>{t("54ee3cde38cd", "Description")}</p>
      <span>{t("82e802cc4b0f", "Footer")}</span>
    </div>;
}"
`;

exports[`transformComponent > server components > should transform server component with multiple text nodes in paragraph 1`] = `
"import { getServerTranslations } from "@lingo.dev/_compiler/react/server";
export default async function ServerPage() {
  const {
    t
  } = await getServerTranslations({
    sourceLocale: "en",
    serverPort: 60000,
    hashes: ["4b1203f723d1", "b68747a48800", "ecaa2508bfa5"]
  });
  return <div>
      <h1>{t("4b1203f723d1", "Welcome to our site")}</h1>
      <p>{t("b68747a48800", "This is a paragraph with three short strings inside it.")}</p>
      <button>{t("ecaa2508bfa5", "Click here")}</button>
    </div>;
}"
`;

exports[`transformComponent > single component > should skip whitespace-only text 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Spacey() {
  const t = useTranslation(["a0139c83fa7f"]);
  return <div>

      <h1>{t("a0139c83fa7f", "Title")}</h1>

    </div>;
}"
`;

exports[`transformComponent > single component > should transform a simple component with text 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Welcome() {
  const t = useTranslation(["f107c6bf1474"]);
  return <div>{t("f107c6bf1474", "Hello World")}</div>;
}"
`;

exports[`transformComponent > single component > should transform component with multiple text nodes 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Card() {
  const t = useTranslation(["ac78456dc11b", "c32ab6fbd661", "8ea4da0d08f6"]);
  return <div>
      <h1>{t("ac78456dc11b", "Welcome")}</h1>
      <p>{t("c32ab6fbd661", "This is a description")}</p>
      <button>{t("8ea4da0d08f6", "Click me")}</button>
    </div>;
}"
`;

exports[`transformComponent > skip translation > should skip translation for <code> elements 1`] = `
"import { useTranslation } from "@lingo.dev/_compiler/react";
export function Example() {
  const t = useTranslation(["64e588c6127f"]);
  return <div>
      <p>{t("64e588c6127f", "Install using <code0/> command", {
        code0: () => <code>npm install package</code>
      })}</p>
    </div>;
}"
`;

exports[`transformComponent > use directive mode > should transform files with 'use i18n' directive 1`] = `
""use i18n";

import { useTranslation } from "@lingo.dev/_compiler/react";
export function Test() {
  const t = useTranslation(["04784cab2f8c"]);
  return <div>{t("04784cab2f8c", "Hello")}</div>;
}"
`;
